--- a/qizzypro.conf
+++ b/qizzypro.conf
@@ -1,3 +1,6 @@
+# QizzyPro DDoS Protection System
+# Copyright (c) 2025 IC Devlopment 
+# All rights reserved. Unauthorized use is strictly prohibited.
 [advanced_mitigation]
 enable_fallback_blocking = true
 block_other_attack_contributors = true
